# tapb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  toolchain-clang8.cmake
src/: args.cpp  args.hpp  main.cpp  simple_options.hpp
src/basic/: main.cpp
src/basic_bkpts/: main.cpp
src/breakpoint/: breakpoint.cpp  breakpoint.hpp
src/envx/: main.cpp
src/hello/: main.cpp
src/randcopy/: main.cpp
src/sf2float/: main.cpp
src/sfenv/: main.cpp
src/sfgain/: main.cpp
src/sfnorm/: main.cpp
src/sfpan/: main.cpp
src/sfprop/: main.cpp
src/util/: basic_envelope_generator.hpp  checked_invoke.hpp  envelope_generator_base.hpp  math_utils.hpp  pan_utils.hpp  simple_options.hpp  sndfile_utils.hpp  stereo_envelope_generator.hpp
test/breakpoint/: breakpoint.test.cpp
test/util/: stereo_envelope_generator.test.cpp
